--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+**/*u8hi*
 # Byte-compiled / optimized / DLL files
+
 __pycache__/
 *.py[cod]
 *$py.class
@@ -128,6 +130,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+**/.env
 .env
 .venv
 env/
