--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 ## check https://github.com/vanna-ai/vanna/blob/main/pyproject.toml
 
 #==================================================================
-# uncomment below to install from forked vanna source remotely
-#==================================================================
-# git+https://github.com/wgong/ssadata.git
-# install from forked vanna locally
-# cd ~/projects/DuckAI/ssadata
-# pip install -e .
-# pip show vanna
+# ssadata is forked from source vanna (https://github.com/vanna-ai/vanna) 
 # version 0.7.5 as of 2024-12-03
+# 
+# uncomment below to install from github
+#==================================================================
+# git+https://github.com/digital-duck/ssadata.git
+
+# uncomment below to install from local clone
+#==================================================================
+# mkdir digital-duck
+# cd digital-duck
+# git clone https://github.com/digital-duck/ssadata.git
+# cd ssadata
+# pip install -e .                      # to verify: pip show vanna
 #==================================================================
 
 python-dotenv
